--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Owner/Documents/GitHub/project-captcha/lib/stdlib-package.jar"/>
+	<classpathentry kind="lib" path="C:/Users/quank/CSE237_Programming_Tools/project-captcha/lib/stdlib-package.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
